# code

./: .gitignore  .gitmodules  CLAUDE.md  claudecontroller
bat/: wallpaper.bat
data/: stop_words_english.txt
html/: circular-text-2.html  circular-text-3.html  circular-text-4.html  circular-text-5.html  circular-text-6.html  circular-text.html
html/circular-text/: getCircularText.0.js  getCircularText.1.js  getCircularText.2.js  index.html  scripts.js  styles.css
html/gh-workshop-20221105/: notes.md
java/: Final.java  InstrumentationAgent.java  MANIFEST.MF  Mismatch.java
js/: tasker_get_angles.js
python/: test.py
python/exec-dashboard/: dashboard.yaml  pyproject.toml
python/exec-dashboard/dashboard/: __main__.py  app.py  config.py  runner.py  usage.py
python/exec-dashboard/dashboard/widgets/: dashboard_switcher.py  file_picker.py  log_panel.py  param_modal.py
python/exec-dashboard/docs/plans/: 2026-05-07-exec-dashboard-design.md  2026-05-07-exec-dashboard-implementation.md  2026-05-07-sort-and-palette-design.md  2026-05-07-sort-and-palette-implementation.md
python/exec-dashboard/tests/: test_config.py  test_runner.py  test_usage.py
sh/: bbapi  build-awesome-readme.sh  create-katalon-customizations.sh  export-bugz.json.sh  export-bugz.sh  find-duplicates.sh  floop.sh  getmicro  git_tag_release.sh  include-source  install-python-dependencies.sh  stnm_backup.sh  test.csv  test.html  test.json  test.tsv  test2.csv  update_metadata.sh
test/: .gitignore
xpath/: select-cell-by-column-and-value.txt  select-checkbox-by-column-and-value.txt  xpath.js
(+420 files in other folders)
