[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exec-dashboard"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "textual-dev>=0.80.0",
]

[project.scripts]
dashboard = "dashboard.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["dashboard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
